# LoKal-liveTranscript

./: .gitignore  README.md  pyrightconfig.json  suggest_ai.sln
audio-service-csharp/src/: AudioCaptureService.csproj  AudioLoopbackStreamer.cs  Models.cs  Program.cs
electron-app/: index.html  package-lock.json  package.json  tsconfig.electron.json  tsconfig.json
electron-app/electron/: main.ts  preload.ts
electron-app/electron/process/: audioService.ts  pythonEngine.ts
electron-app/scripts/: run-electron-dev.cjs
electron-app/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
electron-app/src/components/: LivePanel.tsx  SettingsModal.tsx  Toolbar.tsx
electron-app/src/hooks/: useEngineSocket.ts
electron-app/src/types/: contracts.ts
python-engine/: pyproject.toml
python-engine/app/core/: config.py
python-engine/app/nlp/: pipeline.py
python-engine/app/transcription/: __init__.py  engine.py
python-engine/app/websocket/: __init__.py  server.py
scripts/: bootstrap.ps1  prepare-runtime.ps1  start-dev.ps1
