[project]
name = "suggest-ai-engine"
version = "1.0.0"
description = "Realtime transcription engine"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper==1.1.1",
  "numpy==2.2.1",
  "websockets==12.0",
  "langdetect==1.0.9"
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
